Fix emoji popup style (issue #89)
Squashed commit of the following:

commit 9dda7057ccf0cfca2a4b1139e6573277aebd5369
Author: Jonny Barnes <jonny@jonnybarnes.uk>
Date:   Sun Jan 27 14:12:33 2019 +0000

    Stop words wrapping in popup

--- a/resources/sass/_emoji.scss
+++ b/resources/sass/_emoji.scss
@@ -13,7 +13,6 @@ span[role=img][aria-label]:hover::after {
     z-index: 1;
     bottom: 1.5em;
     left: 0;
-    max-width: 5em;
     padding: 0.5em 0.75em;
     border: 0.05em solid rgba(255, 255, 255, 1);
     border-radius: 0.2em;
